--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,5 +1,5 @@
 <style type="text/css">
-  /* @font-face {
+  @font-face {
     font-family: 'Nexa-Regular';
     src: url('shared/fonts/Nexa-Regular.otf') format('otf');
     font-weight: normal;
@@ -7,5 +7,5 @@
   }
   body {
     font-family: 'Nexa-Regular';
-  } */
+  }
 </style>
